# wechat-search-skill

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LICENSE.txt  README.md  SKILL.md  TESTING_GUIDE.md  VERSIONS.md  pyproject.toml  requirements.txt  setup.py  wechat-article-search-workflow.md  wechat-crawler-tech-selection.md
scripts/: article_utils.py  content_fetcher.py  formatters.py  keyword_search.py  requirements.txt  sogou_search.py  url_resolver.py
skill/: SKILL.md
src/wechat_search/: __init__.py  cli.py
src/wechat_search/skill_data/: SKILL.md
src/wechat_search/skill_data/references/: usage.md
src/wechat_search/spider/: __init__.py
src/wechat_search/spider/log/: __init__.py  utils.py
src/wechat_search/spider/wechat/: __init__.py  async_utils.py  cache_codec.py  content_fetcher.py  formatters.py  login.py  paths.py  run.py  scraper.py  sogou_search.py  url_resolver.py  utils.py
