[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-search-skill"
version = "1.0.0"
description = "微信公众号文章检索 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "loguru>=0.6.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "markdownify>=0.11.0",
    "tqdm>=4.64.0",
    "DrissionPage>=4.0.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
wechat-search = "wechat_search.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wechat_search = ["skill_data/**/*"]
